# policytool

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  release-tasks.sh  setup.cfg
.github/workflows/: main.yml
backend/dissco/: admin.py
designs/: README.md  designs.excalidraw
dissco/: README.md  manage.py  pytest.ini
dissco/common/: admin.py  api_views.py  loading_utils.py  models.py  serializers.py  views.py
dissco/common/fixtures/: institutions.yaml
dissco/common/migrations/: 0001_initial.py  0002_institutionuser.py  0003_rename_wikidata_id_institution_ror_id_and_more.py
dissco/common/tests/: test_populate.py
dissco/digital_readiness/: apps.py
dissco/dissco/: asgi.py  urls.py  wsgi.py
dissco/dissco/settings/: base.py  heroku.py  tests.py
dissco/maturity/: admin.py  api_views.py  apps.py  loading.py  models.py  packs.py  serializers.py
dissco/maturity/defs/: leadershipAndManagement.yml  organisationalStructureAndServiceDelivery.yml
dissco/maturity/fixtures/: categories.yaml
dissco/maturity/migrations/: 0001_initial.py  0002_responder_unique_name_owner.py  0003_response_response_unique_maturity_response.py
dissco/policy/: admin.py  alignment.py  api_views.py  loader.py  models.py  packs.py  serializers.py  utils.py
dissco/qa/: api.py  packs.py
dissco/static/: index.html  openapi.html  openapi.yaml
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  routes.js
frontend/src/store/: auth.js  (+1 more)
(+175 files in other folders)
