[metadata]
name = Policy Tool
version = 0.0.1
description = A tool allowing DiSSCo partners to self-assess their alignment with the DiSSCo policies that govern the various DiSSCo services.
long_description = file: README.md
license_files = LICENSE
classifiers =
  Framework :: Django
  Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
  Django~=4.0.3
  psycopg2~=2.9.3
  requests~=2.27.1
  PyYAML~=6.0
  pycountry==22.3.5

[options.extras_require]
test =
  pytest
  pytest-django
  pytest-cov
  responses

deploy =
  gunicorn

[options.packages.find]
exclude =
  tests
